<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_name"
            style="@style/peopleDetailStyle"
            android:layout_weight="9"
            android:text="people"
            app:layout_constraintRight_toLeftOf="@id/tv_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/peopleDetailStyle"
            android:layout_weight="1"
            android:text="gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_age_title"
            style="@style/peopleDetailStyle"
            android:layout_weight="8"
            android:text="@string/age_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_age"
            style="@style/peopleDetailStyle"
            android:layout_weight="2"
            android:text="age"
            app:layout_constraintStart_toEndOf="@+id/tv_age_title"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_eye_color_title"
            style="@style/peopleDetailStyle"
            android:layout_weight="8"
            android:text="@string/eye_color_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_age_title" />

        <TextView
            android:id="@+id/tv_eye_color"
            style="@style/peopleDetailStyle"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:text="eye_color"
            app:layout_constraintStart_toEndOf="@+id/tv_eye_color_title"
            app:layout_constraintTop_toBottomOf="@id/tv_age" />

        <TextView
            android:id="@+id/tv_hair_color_title"
            style="@style/peopleDetailStyle"
            android:layout_weight="8"
            android:text="@string/hair_color_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_eye_color_title" />

        <TextView
            android:id="@+id/tv_hair_color"
            android:layout_weight="2"
            android:text="hair_color"
            style="@style/peopleDetailStyle"
            app:layout_constraintStart_toEndOf="@+id/tv_hair_color_title"
            app:layout_constraintTop_toBottomOf="@id/tv_eye_color" />

        <TextView
            android:id="@+id/tv_people_films_title"
            android:text="@string/people_films"
            android:layout_width="match_parent"
            android:textAlignment="center"
            style="@style/peopleDetailStyle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_hair_color_title" />

        <TextView
            android:id="@+id/tv_people_films"
            android:layout_width="match_parent"
            style="@style/peopleDetailStyle"
            android:text="list_films"
            app:layout_constraintTop_toBottomOf="@id/tv_people_films_title" />

        <TextView
            android:id="@+id/tv_people_species_title"
            android:layout_width="match_parent"
            android:text="@string/people_species"
            style="@style/peopleDetailStyle"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_people_films" />

        <TextView
            android:id="@+id/tv_people_species"
            android:layout_width="match_parent"
            style="@style/peopleDetailStyle"
            android:text="list_species"
            app:layout_constraintTop_toBottomOf="@id/tv_people_species_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>